# Local-first-battery-energy-storage-optimization-platform-for-modern-smart-grids

./: .gitignore  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes.py
backend/app/ml/: forecasting.py
backend/app/models/: schemas.py
backend/app/optimization/: engine.py
backend/app/services/: analytics.py  grid_service.py
backend/app/simulators/: grid_simulator.py
backend/app/storage/: database.py
data/: synthetic_grid_telemetry.csv
docs/: API_EXAMPLES.md
frontend/: package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: MetricCard.tsx  PowerFlow.tsx
frontend/src/types/: energy.ts
scripts/: generate_dataset.py  train_forecaster.py
